mavensmate/SandBox/src/objects/Slider_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course</label>
        <referenceTo>Course_Detail__c</referenceTo>
        <relationshipLabel>Slider Assignments</relationshipLabel>
        <relationshipName>Slider_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <formula>Text(Slider_Assembly__r.Model__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <formula>Slider_Assembly__r.Serial_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Serial Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slider_Assembly__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Slider Assembly</label>
        <referenceTo>Slider_Assembly__c</referenceTo>
        <relationshipLabel>Slider Assignments</relationshipLabel>
        <relationshipName>Slider_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Slider Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Serial_Number__c</columns>
        <columns>Course__c</columns>
        <columns>Model__c</columns>
        <columns>Slider_Assembly__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Record Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Slider Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>